# roadprintz_camera_calibration

./: CMakeLists.txt  README.md  ceres_notes  debug_strategy  industrial_calib_notes  interactive_image_gui2_notes  package.xml  perspective_transform_notes  thoughts_on_calibration_and_transforms
calib_coordinator_w_visual_servoing/: CMakeLists.txt  README.md  package.xml
calib_coordinator_w_visual_servoing/launch/: cam_calib.launch
calib_coordinator_w_visual_servoing/src/: calib_coordinator_w_visual_servoing.cpp
cam_cal_from_3d_pts/: CMakeLists.txt  Readme.md  package.xml.disable
cam_cal_from_3d_pts/data/: image1_key_pts_metric.csv  image1_pretransformed_corners.csv  image2_key_pts_metric.csv  image2_pretransformed_corners.csv  image3_key_pts_metric.csv  image3_pretransformed_corners.csv  image4_key_pts_metric.csv  image4_pretransformed_corners.csv  image_key_pts_metric.csv  image_key_pts_pixels.csv
cam_cal_from_3d_pts/include/cam_cal_from_3d_pts/: 3dlib.h
cam_cal_from_3d_pts/launch/: test.launch  test_four.launch  test_interp.launch
cam_cal_from_3d_pts/src/: 3dlib.cpp  test_main.cpp  test_main_four.cpp
ceres_cal/: CMakeLists.txt  industrial_calib_notes
ceres_cal/images/huawei_ipcam_calib_snapshots/: calibration_points.txt
ceres_cal/src/: circle_detector.cpp  find_features.cpp  interactive_image_gui2.cpp  ipcam.cpp  ipcam_svc.cpp  perspective_transform.cpp  rp_find_template.cpp  test_find_contours.cpp
ceres_code/: calibration_file_reader.cpp
images/huawei_extrinsic_cal/: analysis.ods  calib_notes  calib_test_plan_3_9_2020  extrinsic_cal_notes
images/huawei_ipcam_calib_snapshots/: notes_Feb_12
images/transformed_images/: README
l515_intrinsic_cal/: CMakeLists.txt  README.md  dev_notes  package.xml
l515_intrinsic_cal/src/: l515_extrinsic_calib_data_acq_coordinator.cpp  l515_intrinsic_calib_data_acq_coordinator.cpp  l515_visual_servoing_test.cpp
old_ceres_cal/: README.md
old_ceres_cal/ceres_code/: README  wsn_cam_calib_ceres.cpp
rbip_calibration/: CMakeLists.txt  README.md  calib_debug_notes  extrinsics_notes_Oct2020  frames_for_calibration  hand_eye_calib_notes_Oct2020  notes_on_Gazebo_camera_model_to_match_Huawei  notes_on_cam_poster_calib_test  notes_perspective_transform_w_lidar  package.xml  progress_fit_ideal_grid  wsn_image_gui_notes
rbip_calibration/include/rbip_calibration/: openCV_utils.h
rbip_calibration/octave/: dist.m  fit_template_to_corners.m  image_from_pointcloud_fwd_gridpoints.csv  image_from_pointcloud_fwd_keypoints.csv  image_from_pointcloud_rvrs_gridpoints.csv  image_vs_lidar.m  match_rms_err.m  poster_virtual_gridpoints.csv
rbip_calibration/src/: cam_poster_calib_test_main.cpp  cam_poster_calib_test_service_node.cpp  cam_poster_calib_test_service_node_v2.cpp  cam_poster_calib_test_service_node_v3.cpp  example_find_poster_client.cpp  fake_publish_camera_from_image.cpp  find_extrinsics_v3.cpp  find_poster.cpp  find_poster_10x7.cpp  find_poster_9x7_all_extrinsic_images.cpp  find_poster_9x7_all_images.cpp  find_poster_in_camera_image_10x7_service.cpp  find_poster_in_lidar_image.cpp  find_poster_in_lidar_image_10x7.cpp  find_poster_in_lidar_image_10x7_service.cpp  find_poster_v2.cpp  interactive_image_gui.cpp  manual_find_extrinsics.cpp  openCV_utils.cpp  openCV_utils_example_main.cpp  perspective_transform_v3.cpp  rbip_image_projector.cpp  visual_feedback_on_poster_v1.cpp
rbip_calibration/srv/: CamPosterCalibTestSrv.srv
src/: analyze_image16.cpp  analyze_image17.cpp  cam_poster_calib_test_main.cpp  circle_detector.cpp  draw_polylines.cpp  extrinsic_calib.cpp  find_extrinsics.cpp  find_extrinsics_v2.cpp  find_poster.cpp  find_poster_from_lidar.cpp  hough_lines.cpp  interactive_image_gui.cpp  interactive_image_gui2.cpp  interactive_image_gui3.cpp  ipcam_streamer.cpp  openCV_utils.cpp  openCV_utils_example_main.cpp  perspective_transform.cpp  perspective_transform_v2.cpp  test_find_patterns.cpp
src_old/: cam_poster_calib_test_service_node.cpp  fake_publish_camera_from_image.cpp  find_extrinsics_from_LIDAR.cpp  find_poster_9x7.cpp  package.xml.disable
srv/: CamPosterCalibTestSrv.srv
